<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp"
    android:background="@drawable/rectangle_red">

    <TextView
        style="@style/Base.TextAppearance.AppCompat.Body2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/id_plc_mms"
        android:textColor="@color/colorRed"
        />
    <TextView
        style="@style/TextAppearance.AppCompat.Body1"
        android:id="@+id/idPlcMms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/id_plc_mms"
        android:paddingLeft="10dp"
        />
    <TextView
        style="@style/Base.TextAppearance.AppCompat.Body2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/state"
        android:textColor="@color/colorRed"
        />
    <TextView
        style="@style/TextAppearance.AppCompat.Body1"
        android:id="@+id/estadoPlcMms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/state"
        android:paddingLeft="10dp"
        />
    <TextView
        style="@style/Base.TextAppearance.AppCompat.Body2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_mac"
        android:textColor="@color/colorRed"
        />
    <TextView
        style="@style/TextAppearance.AppCompat.Body1"
        android:id="@+id/macPlcMms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/txt_mac"
        android:paddingLeft="10dp"
        />

    <TextView
        style="@style/Base.TextAppearance.AppCompat.Body2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_gan_tx"
        android:textColor="@color/colorRed"
        />
    <TextView
        style="@style/TextAppearance.AppCompat.Body1"
        android:id="@+id/gtxPlcMms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/txt_gan_tx"
        android:paddingLeft="10dp"
        />
    <TextView
        style="@style/Base.TextAppearance.AppCompat.Body2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_gan_rx"
        android:textColor="@color/colorRed"
        />
    <TextView
        style="@style/TextAppearance.AppCompat.Body1"
        android:id="@+id/grxPlcMms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/txt_gan_rx"
        android:paddingLeft="10dp"
        />
    <TextView
        style="@style/Base.TextAppearance.AppCompat.Body2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_delay_tx"
        android:textColor="@color/colorRed"
        />
    <TextView
        style="@style/TextAppearance.AppCompat.Body1"
        android:id="@+id/retardoPlcMms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/txt_delay_tx"
        android:paddingLeft="10dp"
        />
    <TextView
        style="@style/Base.TextAppearance.AppCompat.Body2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_rate_tx"
        android:textColor="@color/colorRed"
        />
    <TextView
        style="@style/TextAppearance.AppCompat.Body1"
        android:id="@+id/tasaPlcMms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/txt_rate_tx"
        android:paddingLeft="10dp"
        />

</LinearLayout>