<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">

        <LinearLayout
            android:id="@+id/tab2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/txt_rta_MC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Datos actuales en el PLC-MC"
                android:paddingBottom="15dp"
                />

            <TextView
                android:id="@+id/txt_view_rta_setMC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:background="@drawable/rectangle_green"
                android:padding="10dp"/>

            <TextView
                android:id="@+id/txt_mc_parametros"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subtitle_parameters_PLC"
                android:textSize="17sp"
                android:gravity="center"
                android:layout_marginBottom="15dp"
                />

            <TextView
                android:id="@+id/txt_gan_tx_mc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_gan_tx"
                android:layout_marginBottom="1dp"
                />

            <Spinner
                android:id="@+id/transmission_gain_spinner_mc"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/txt_rx_gan_mc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_gan_rx"
                android:layout_marginBottom="1dp"
                android:paddingTop="12dp"
                />

            <Spinner
                android:id="@+id/reception_gain_spinner_mc"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/txt_tx_delay_mc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_delay_tx"
                android:layout_marginBottom="1dp"
                android:paddingTop="12dp"
                />

            <Spinner
                android:id="@+id/transmission_delay_spinner_mc"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/txt_tx_rate_mc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_rate_tx"
                android:layout_marginBottom="1dp"
                android:paddingTop="12dp"
                />

            <Spinner
                android:id="@+id/transmission_rate_spinner_mc"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                />

            <Button
                android:id="@+id/btn_check_settings_mc"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                android:text="@string/button_check_config"
                android:layout_marginBottom="10dp"
                />

            <Button
                android:id="@+id/btn_record_mc"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                android:text="@string/button_record"
                android:layout_marginBottom="10dp"
                />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>