<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:android1="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">

    <LinearLayout
        android:id="@+id/tab1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/txt_view_rta_clock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:background="@drawable/rectangle_green"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/editFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="yyyy/mm/dd"
            />

        <ImageView
            android:id="@+id/img_vw_calendar"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:clickable="true"
            android:onClick="mostrarCalendario"
            />

        <EditText
            android:id="@+id/id_dispositivoMMS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="ID PLC-MMS:"
            android:layout_marginBottom="30dp"
            />

        <EditText
            android:id="@+id/id_macro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="ID Macro:"
            android:layout_marginBottom="30dp"
            />

        <TextView
            android:id="@+id/txt_rta_MMS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Datos actuales en el PLC-MMS"
            android:paddingBottom="15dp"
            />

        <TextView
            android:id="@+id/txt_view_rta_setMMS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:background="@drawable/rectangle_green"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/txt_mms_parametros"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subtitle_parameters_PLC"
            android:textSize="17sp"
            android:gravity="center"
            android:layout_marginBottom="15dp"
            />

        <TextView
            android:id="@+id/txt_gan_tx_mms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_gan_tx"
            android:layout_marginBottom="1dp"
            />

        <Spinner
            android:id="@+id/transmission_gain_spinner_mms"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/txt_rx_gan_mms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_gan_rx"
            android:layout_marginBottom="1dp"
            android:paddingTop="12dp"
            />

        <Spinner
            android:id="@+id/reception_gain_spinner_mms"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/txt_tx_delay_mms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_delay_tx"
            android:layout_marginBottom="1dp"
            android:paddingTop="12dp"
            />

        <Spinner
            android:id="@+id/transmission_delay_spinner_mms"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/txt_tx_rate_mms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_rate_tx"
            android:layout_marginBottom="1dp"
            android:paddingTop="12dp"
            />

        <Spinner
            android:id="@+id/transmission_rate_spinner_mms"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/txt_time_survey_mms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_survey_hour"
            android:layout_marginBottom="1dp"
            android:paddingTop="12dp"
            />

        <Spinner
            android:id="@+id/time_survey_spinner_mms"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            />

        <Button
            android:id="@+id/btn_check_settings_mms"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="3dp"
            android:text="@string/button_check_config"
            android:layout_marginBottom="10dp"
            />

        <Button
            android:id="@+id/btn_record_mms"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="3dp"
            android:text="@string/button_record"
            android:layout_marginBottom="10dp"
            />

    </LinearLayout>
    </RelativeLayout>
    </ScrollView>
